set active link to "HOME" when user clicks on back to top button, fix ProjectInfo i nline margin, adjust contact icon size and margin, remove align items center from flex-column-center class, edit songs, text -align center Phone content

--- a/src/index.scss
+++ b/src/index.scss
@@ -66,7 +66,6 @@ svg {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 
 .flex-wrap {
@@ -97,8 +96,6 @@ svg {
   }
 }
 
-
-
 .page-margin {
   margin: clamp(10px, 10vw, 130px);
   margin-bottom: 0;
@@ -109,11 +106,9 @@ svg {
 }
 
 .heading {
-  font-family: 'Satisfy', cursive;
-  font-size: clamp(1.75rem, 5vw, 3rem);
+  font-size: clamp(1.5rem, 3vw, 4rem);
   color: $pink;
   margin-top: 0;
-  text-align: center;
 }
 
 .btn {
@@ -184,7 +179,6 @@ svg {
     margin: clamp(10px, 5vw, 50px);
     margin-top: clamp(65px, 15vw, 100px);
   }
-
 
   .home-page {
     flex-direction: column;
