--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -23,6 +23,7 @@ $white: #FFFFFF;
   border-radius: 20px;
   box-shadow: 10px 10px 30px 1px rgba(0, 0, 0, 0.5);
   z-index: 1;
+  align-items: center;
 
   .phone-display {
     background-color: $pink;
@@ -30,6 +31,7 @@ $white: #FFFFFF;
     margin: clamp(5px, 1.25vw, 10px);
     padding-block: clamp(15px, 3vw, 30px);
     padding-inline: clamp(20px, 1vw, 15px);
+    align-items: center;
     text-align: center;
 
     .avatar {
@@ -44,7 +46,7 @@ $white: #FFFFFF;
       font-size: clamp(1.5rem, 2.5vw, 2.5rem);
       font-weight: 400;
       color: $white;
-      margin-block: 2vw 0;
+      margin-block: clamp(10px, 1vw, 30px) 0;
     }
 
     .title {
@@ -58,6 +60,8 @@ $white: #FFFFFF;
   }
 
   .phone-control {
+    align-items: center;
+
     .song {
       font-size: clamp(0.5rem, 1vw, 1rem);
       width: clamp(100px, 15vw, 200px);
@@ -167,7 +171,7 @@ $white: #FFFFFF;
     }
 
     .home-buttons {
-        margin-top: clamp(30px, 4vw, 50px);
+        margin-top: clamp(30px, 4vw, 75px);
     }
   }
 }
