--- a/src/styles/PortfolioPage.scss
+++ b/src/styles/PortfolioPage.scss
@@ -39,7 +39,7 @@ $white: #FFFFFF;
     background-color: $cherry;
     padding-inline: clamp(20px, 2vw, 30px);
     margin-block: clamp(10px, 1vw, 20px);
-    margin-inline: clamp(10px, 2vw, 20px);
+    margin-inline: clamp(20px, 2vw, 30px);
     flex-grow: 1;
 
     .project-name {
@@ -71,8 +71,8 @@ $white: #FFFFFF;
 
       svg {
         color: $pink;
-        width: 20px;
-        height: 20px;
+        width: 25px;
+        height: 35px;
         margin-left: 2px;
       }
 
@@ -139,7 +139,7 @@ $white: #FFFFFF;
   .image-slider {
     border-radius: 20px;
     margin-block: clamp(10px, 1vw, 20px);
-    margin-inline: clamp(20px, 2vw, 20px);
+    margin-inline: clamp(20px, 2vw, 30px);
     flex-grow: 1;
 
     &:hover {
